Adding pom.xml